# PYAM_IR

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  codegen.h  dsl_write.h  libpyam_ir.h  operations.h
.github/workflows/: workflows.yaml
Penis/: CMakeLists.txt
Penis/lib/: CMakeLists.txt
Penis/lib/List/: .gitignore  main_list.cpp
Penis/lib/List/include/: list.h  list_construction.h  list_error_handler.h  list_pop.h  list_push.h  list_src.h
Penis/lib/List/include/My_lib/: helpful.h
Penis/lib/List/include/My_lib/Assert/: my_assert.h  print_error.h
Penis/lib/List/include/My_lib/Logger/: logging.h
Penis/lib/List/include/My_lib/My_stdio/: my_stdio.cpp  my_stdio.h
Penis/lib/List/source/: list_construction.cpp  list_error_handler.cpp  list_pop.cpp  list_push.cpp  list_src.cpp
Penis/lib/MyLib/: helpful.h
Penis/lib/MyLib/Assert/: print_error.cpp
Penis/lib/MyLib/Logger/: logging.cpp
Penis/lib/MyLib/My_stdio/: my_stdio.cpp  my_stdio.h
Penis/lib/include/: read_ir.h  write_ir.h
Penis/lib/source/: read_ir.cpp  write_ir.cpp
Penis/middleend/: CMakeLists.txt
Penis/middleend/include/: dead_code_elim.h  error_handler.h  middleend.h  parse_flags_lang.h  subexpression.h  unused_vars.h
Penis/middleend/source/: dead_code_elim.cpp  error_handler.cpp  main_middleend.cpp  middleend.cpp  parse_flags_lang.cpp  subexpression.cpp  unused_vars.cpp
include/: codegen.h  dsl_write.h  key_words.h  libpyam_ir.h  libpyam_ir.hpp  operations.h
src/: codegen.h  dsl_write.h  key_words.h  operations.c  operations.h
